--- a/app/views/auxiliaries/new.html.erb
+++ b/app/views/auxiliaries/new.html.erb
@@ -1,7 +1,7 @@
 <div class="title">
   <h1>AO Registration</h1>  
-  <p>Interested in becoming an AO? Fill out this form and you'll be included in all our AO emails.</p>
-  <p>Want to learn more about the AO system? Click <%= link_to "here", auxiliaries_path %>!</p>
+  <p>Interested in becoming an AO? Fill out this form and you'll be included in all our AO emails.<br />
+  Want to learn more about the AO system? Click <%= link_to "here", auxiliaries_path %>!</p>
 </div>
 <%= form_for(:auxiliary, :html => {:class => "form-horizontal"}) do |f| %>
 
