--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -1,6 +1,6 @@
 <div class="title">
   <h1>Contact Us</h1>
-  <p>Got a burning question? Fill out this form and we'll get back to you soon!</p>
+  <p>Got a burning question? Want to help out at an event? Fill out this form or email us at <a href="mailto:csacollegepark@gmail.com">csacollegepark@gmail.com</a> and we'll get back to you soon!</p>
 </div>
 
 <%= form_for(:contact, :html => {:class => "form-horizontal"}) do |f| %>
