--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -1,7 +1,7 @@
 <div class="title">
 <h1>Sign Up!</h1>
 <p>Welcome! Fill out this form and you'll automatically be included in our listserv emails so you can get all our exciting news and announcements!</p>
-<p>Please select your shirt size when you register. The tshirt cost will be $10 and we'll soon send out an email telling you where you can pick it up!</p>
+<p>Please select your shirt size when you register. The t-shirt cost will be $10 and we'll soon send out an email telling you where you can pick it up!</p>
 <p>After you register here, please don't forget to sign up on <a href="https://orgsync.com/64457/chapter">OrgSync</a>!</p>
 </div>
 <%= form_for(:register, :html => {class: "form-horizontal", :id=>"addNew"}) do |f| %>
@@ -74,7 +74,7 @@
 				<%= f.label :year, 'Year', :class=>'col-sm-2 control-label' %>
 				<div class="col-sm-10">
 					<!-- <%= f.text_field :year %>-->
-					<%= f.select :year, options_for_select([['Freshmen', 'freshmen'], ['Sophomore', 'sophomore'], ['Junior', 'junior'], ['Senior', 'senior'], ['Super Senior', 'supersenior']], selected: :year),{}, {:class => 'form-control'}  %>
+					<%= f.select :year, options_for_select([['Freshmen', 'freshmen'], ['Sophomore', 'sophomore'], ['Junior', 'junior'], ['Senior', 'senior'], ['Other', 'other']], selected: :year),{}, {:class => 'form-control'}  %>
 				</div>
 			</div>
 		<!-- </div> -->
