--- a/app/views/static_pages/calendar.html.erb
+++ b/app/views/static_pages/calendar.html.erb
@@ -1,6 +1,6 @@
 <div class="title">
 <h1>Calendar</h1>
-<p>We will be updating this calendar with upcoming CSA events. Hope to see you there!</p>
+<p>We will be updating this calendar throughout the year with upcoming CSA events. Hope to see you there!</p>
 </div>
 <div id="calendar">
 </div>
