--- a/public/templates/eventTemp.html
+++ b/public/templates/eventTemp.html
@@ -3,7 +3,7 @@
 </div>
 <div class="eventDescription">
 	<p><b>Date</b>: {{eventDate}} </p>
-	<p>{{eventDescription}}</p>
+	<p ng-bind-html="description"></p>
 </div>	
 <div class="minorTitle">
 	<h3>Pictures</h3>
