--- a/app/views/auxiliaries/index.html.erb
+++ b/app/views/auxiliaries/index.html.erb
@@ -1,8 +1,9 @@
 <div class="title">
   <h1>Auxiliary Officers (AO)</h1>
-  <p>The AO system allows anyone who is interested in being involved in CSA the opportunity to understand how we work. As an AO, you help out with setting up events and provide feedback on the ones that you attend. It helps us to improve our events and also lets you experience the process we go through to plan all of our wonderful GBMs. You also get to be around the board and other AOs more often, which we think is pretty awesome!</p>  
-  <p>Interested in becoming one? Sign up <%= link_to "here", new_auxiliary_path %>!</p> 
 </div>
+<!-- moved the description out of title block while AO list is hidden -->
+<p>The AO system allows anyone who is interested in being involved in CSA the opportunity to understand how we work. As an AO, you help out with setting up events and provide feedback on the ones that you attend. It helps us to improve our events and also lets you experience the process we go through to plan all of our wonderful GBMs. You also get to be around the board and other AOs more often, which we think is pretty awesome!</p>  
+<p>Interested in becoming one? Sign up <%= link_to "here", new_auxiliary_path %>!</p> 
 
 <!-- <div id = "ao-table">
 
