--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -144,6 +144,10 @@ div#bodyContent {
 				font-size: 16px;
 			}
 		}
+		div.shirt {
+			text-align: center;
+			margin-bottom: 10px;
+		}
 		form#addNew {				
 			div.form-group {
 				margin-left: 0;
