add in Sophia's translation

--- a/app/views/static_pages/sponsors.html.erb
+++ b/app/views/static_pages/sponsors.html.erb
@@ -8,10 +8,10 @@
 			<b><span class="small_title">About Shopping Trip</span></b><br />
 			Need to get some shopping done? Want to swing by the #Verizon store to learn about the International Student Plan and check out the latest smartphones? No deposit required. Simple signup. Bring your international passport and student visa. Join us on August 27th for a group trip to 10250 Baltimore Avenue College Park, MD 20740. Contact <%= link_to "us", contact_path %> for more details or if you have any questions. You can sign up for the trip <a href="https://docs.google.com/forms/d/1XZpeWMPlxJXc59xJKTBjehT-tp7Z4e2NmWBodwUm9rw/viewform?c=0&w=1">here</a>.</p>
 			<p><b><span class="small_title">关于Verizon International Student Program</span></b><br />
-				欢迎来到University of Maryland！加入全美最大最可靠的4G LTE网络，参与为你量身打造的#Verizon International Student Program#，随时与朋友家人保持紧密联系。办理无需押金，申请方式简单。另外，从现在起至8月31日，回售旧手机即享$200折旧换新款。更多详情，请前往Verizon门店咨询（10250 Baltimore Avenue, College Park, MD 20740。）
+				欢迎来到University of Maryland！加入全美最大最可靠的4G LTE网络，参与为你量身打造的#Verizon International Student Program，随时与朋友家人保持紧密联系。办理无需押金，申请方式简单。另外，从现在起至8月31日，回售旧手机即享$200折旧换新款。点击<a href="http://www.verizonwireless.com/landingpages/international-student">了解更多详情</a>或前往位于10250 Baltimore Avenue, College Park, MD 20740的Verizon门店咨询。
 				<br />
 				<b><span class="small_title">关于“新生办手机购物之旅”</span></b><br />
-				初到美国，想要办理手机业务及购物血拼？跟我们前往全美最大最可靠的4G LTE网络Verizon门店，了解International Student Plan详情并挑选最时尚最新潮的智能手机吧，惊喜尽在9月27日的新生购物选机之旅！参与无需押金，申请方式简单，凭附有留学签证的护照即可。
+				初到美国，想要办理手机业务及购物血拼？跟我们前往全美最大最可靠的4G LTE网络Verizon门店，了解International Student Plan详情并挑选最时尚最新潮的智能手机吧，惊喜尽在8月27日的新生购物选机之旅！参与无需押金，申请方式简单，凭附有留学签证的护照即可。联系<%= link_to "我们", contact_path %>了解更多详情，<a href="https://docs.google.com/forms/d/1XZpeWMPlxJXc59xJKTBjehT-tp7Z4e2NmWBodwUm9rw/viewform?c=0&w=1">注册参与</a>”新生办手机购物之旅“。
 			</p>
 
 		<p id = "sponsor_op"><b>For sponsorship opportunities, please email <a href="emailto:csacollegepark@gmail.com">csacollegepark@gmail.com</a>.</b></p>
