--- a/public/templates/eventTemp.html
+++ b/public/templates/eventTemp.html
@@ -2,7 +2,9 @@
 <h1>{{eventName}}</h1>
 </div>
 <div class="eventDescription">
-	<p><b>Date</b>: {{eventDate}} </p>
+	<p><b>Date</b>: {{eventDate}} <br />
+	   <b>Time</b>: {{eventTime}} <br />
+	   <b>Location</b>: {{eventLocation}}</p>
 	<p ng-bind-html="description"></p>
 </div>	
 <div class="minorTitle">
