new tshirt images

--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -14,11 +14,11 @@
 			<div class="modal-body row">
 	  			<div class="col-md-6 left shirt">	
 	  				<h4>Front</h4>		      				
-	  				<%= image_tag('ShirtFront.JPG', id: 'ShirtFront', class: 'img-responsive') %> 
+	  				<%= image_tag('ShirtFront2.JPG', id: 'ShirtFront', class: 'img-responsive') %> 
 	  			</div>
 	  			<div class="col-md-6 right shirt">
 	  				<h4>Back</h4>
-	  				<%= image_tag('ShirtBack.jpg', id: 'ShirtBack', class: 'img-responsive') %> 
+	  				<%= image_tag('ShirtBack2.jpg', id: 'ShirtBack', class: 'img-responsive') %> 
 	  			</div>	  			
 	  		</div>
 	  		<div class="modal-footer">
