--- a/app/assets/javascripts/static_pages.coffee.erb
+++ b/app/assets/javascripts/static_pages.coffee.erb
@@ -2,18 +2,8 @@ ready = ->
 	# index page text slide in
 	$("#welcome").delay(300).slideDown(500);
 	$("#csa").delay(800).slideDown(500);
-	# $("#welcome").delay(1300).css("display", "none");
-	# home page slideshow
-	# $('body#homePage').vegas
-	# 	timer: false,
-	# 	transitionDuration: 500,
-	# 	# autoplay: false,
-	# 	slides: [
-	# 		{src: '<%= asset_path('home_background.jpg')%>'}
-	# 		{src: '<%= asset_path('background_2.jpg')%>'}
-	# 		{src: '<%= asset_path('background_3.jpg')%>'}
-	# 	]
 	
+	# google calendar config
 	$('#calendar').fullCalendar 
 		googleCalendarApiKey: '<%= ENV["GOOGLE_CALENDAR_API_KEY"] %>'		
 		events: 
