update sponsors page with info about iphone program

--- a/app/views/static_pages/sponsors.html.erb
+++ b/app/views/static_pages/sponsors.html.erb
@@ -4,15 +4,9 @@
 <div id="sponsorsContent" class="row">
 	<div id="moreDetails" class="col-md-8">
 		<p><b><span class="small_title">About Verizon's International Student Program</span></b><br />
-			Welcome to campus! Stay in touch with family and friends on #Verizon's International Student Plan, created just for you. No deposit required. Simple signup and, between now and 8/31, get $200 back for trading in your phone. Find out more <a href="http://www.verizonwireless.com/landingpages/international-student">here</a> or visit the Verizon store at 10250 Baltimore Avenue College Park, MD 20740.<br />
-			<b><span class="small_title">About Shopping Trip</span></b><br />
-			Need to get some shopping done? Want to swing by the #Verizon store to learn about the International Student Plan and check out the latest smartphones? No deposit required. Simple signup. Bring your international passport and student visa. Join us on August 27th for a group trip to 10250 Baltimore Avenue College Park, MD 20740. Contact <%= link_to "us", contact_path %> for more details or if you have any questions. You can sign up for the trip <a href="https://docs.google.com/forms/d/1XZpeWMPlxJXc59xJKTBjehT-tp7Z4e2NmWBodwUm9rw/viewform?c=0&w=1">here</a>.</p>
+			iPhone 6S or 6S Plus available for pre-order now! Trade in your old smartphone for a new iPhone 6S or 6S Plus and get up to $400, when you trade in your old iPhone or Android, and another $100 when you switch to Verizon. Visit the Verizon store at 10250 Baltimore Ave, College Park, MD 20740 to learn more about this offer and <a href="http://vzw.com/internationalstudent">International Student Program</a>. No deposit. Simple signup. Just bring your international passport and student visa.<br />
 			<p><b><span class="small_title">关于Verizon International Student Program</span></b><br />
-				欢迎来到University of Maryland！加入全美最大最可靠的4G LTE网络，参与为你量身打造的#Verizon International Student Program，随时与朋友家人保持紧密联系。办理无需押金，申请方式简单。另外，从现在起至8月31日，回售旧手机即享$200折旧换新款。点击<a href="http://www.verizonwireless.com/landingpages/international-student">了解更多详情</a>或前往位于10250 Baltimore Avenue, College Park, MD 20740的Verizon门店咨询。
-				<br />
-				<b><span class="small_title">关于“新生办手机购物之旅”</span></b><br />
-				初到美国，想要办理手机业务及购物血拼？跟我们前往全美最大最可靠的4G LTE网络Verizon门店，了解International Student Plan详情并挑选最时尚最新潮的智能手机吧，惊喜尽在8月27日的新生购物选机之旅！参与无需押金，申请方式简单，凭附有留学签证的护照即可。联系<%= link_to "我们", contact_path %>了解更多详情，<a href="https://docs.google.com/forms/d/1XZpeWMPlxJXc59xJKTBjehT-tp7Z4e2NmWBodwUm9rw/viewform?c=0&w=1">注册参与</a>”新生办手机购物之旅“。
-			</p>
+				即日起，Verizon接受优先预订 iPhone 6S 及 iPhone 6S Plus。折旧你的旧iPhone或其他手机换新iPhone 6S 或 6S Plus可获享高达$400的折旧换新退款。更多详情，请前往Verizon 10250 Baltimore Ave, College 了解优惠或留学生计划 -- 开新号无需押金，简单申请，请带上护照和留学签证。若已有美国电话号码，转号到Verizon可获得$100账单减免
 
 		<p id = "sponsor_op"><b>For sponsorship opportunities, please email <a href="emailto:csacollegepark@gmail.com">csacollegepark@gmail.com</a>.</b></p>
 	</div>
