--- a/app/views/static_pages/sponsors.html.erb
+++ b/app/views/static_pages/sponsors.html.erb
@@ -13,7 +13,7 @@
 	</div>
 </div>
 <div id="smallSponsorRow" class="row sponsorsContent">
-	<p><b><span class="small_title">We're also sponsored by the following companies: </span></b></p>
+	<p><b><span class="small_title">We're also sponsored by: </span></b></p>
 	<div class="col-md-4">
 		<%= link_to image_tag('studypool.png', :class=>"img-responsive", :size=>"100x100"), "http://www.studypool.com" %>
 		<p><a href='http://www.studypool.com'>Studypool</a>, a leader in online homework help.</p>
