--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -16,7 +16,7 @@
 <%= yield %>
 </div>
 <footer class="footer left">	
-	<p>Photo by Chester Lam</p>	
+	<p>Photo by Luhua</p>	
 </footer>
 <%= render 'layouts/footer' %>
 </body>
