--- a/app/views/auxiliaries/new.html.erb
+++ b/app/views/auxiliaries/new.html.erb
@@ -1,55 +1,96 @@
-<div class="title">
-  <h1>AO Registration</h1>  
-  <p>Interested in becoming an AO? Fill out this form and you'll be included in all our AO emails.<br />
-  Want to learn more about the AO system? Click <%= link_to "here", auxiliaries_path %>!</p>
+<!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+	<form action="//umdcsa.us14.list-manage.com/subscribe/post?u=MAILCHIMP_API_KEY&amp;id=MAILCHIMP_API_AO_LIST_KEY" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+			<div class="title">
+				<h1>AO (Auxiliary Officer) Registration</h1>
+				<p>The AO system allows anyone who is interested in being involved in CSA the opportunity to understand how we work.
+           As an AO, you help out with setting up events and provide feedback on the ones that you attend.
+           It helps us to improve our events and also lets you experience the process we go through to plan all of our wonderful GBMs.
+           You also get to be around the board and other AOs more often, which we think is pretty awesome!</p>
+           <br><p>Feel free to join our AO group once you decided to be part of this BIG family <a href="https://www.facebook.com/groups/1496741480625510/">AO Facebook Group.</a></p>
+				<br><p>Please select your shirt size when you register. The t-shirt cost will be $10 and we'll soon send out an email telling you where you can pick it up!</p>
+				<p>After you register here, please don't forget to sign up on <a href="https://orgsync.com/64457/chapter">OrgSync</a>!</p>
+				<br><p><font color = "red">*</font> You can update your profile by submitting a new application, you should be able to receive an email to update your profile.</p>
+			</div>
+
+			<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+			<div class="mc-field-group">
+				<label for="mce-FNAME">First Name  <span class="asterisk">*</span>
+				</label>
+				<input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+			</div>
+			<div class="mc-field-group">
+				<label for="mce-LNAME">Last Name  <span class="asterisk">*</span>
+				</label>
+				<input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+			</div>
+			<div class="mc-field-group">
+				<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+				</label>
+				<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+			</div>
+			<div class="mc-field-group input-group">
+    		<strong>Shirt Size  <span class="asterisk">*</span>
+				</strong>
+    		<ul><li><input type="radio" value="Small" name="SHIRTSIZE" id="mce-SHIRTSIZE-0"><label for="mce-SHIRTSIZE-0">Small</label></li>
+						<li><input type="radio" value="Medium" name="SHIRTSIZE" id="mce-SHIRTSIZE-1"><label for="mce-SHIRTSIZE-1">Medium</label></li>
+						<li><input type="radio" value="Large" name="SHIRTSIZE" id="mce-SHIRTSIZE-2"><label for="mce-SHIRTSIZE-2">Large</label></li>
+						<li><input type="radio" value="Don't need one" name="SHIRTSIZE" id="mce-SHIRTSIZE-3" checked="Don't need one"><label for="mce-SHIRTSIZE-3">Don't need one</label></li>
+				</ul>
+				<p>Here's what the shirt looks like: <a href="#" data-toggle="modal" data-target="#tshirt-modal">CSA T-Shirt</a></p>
+
+					<!-- modal for AO tshirt image-->
+					<div class = "modal fade" id="tshirt-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+									<h4 class="modal-title" id="myModalLabel"><center>CSA T-Shirt</center></h4>
+								</div>
+								<div class="modal-body row">
+ 									<div class="col-md-6 left shirt">
+ 										<h4>Front</h4>
+ 											<center><%= image_tag('AO_shirt_front.jpg', id: 'ShirtFront', class: 'img-responsive') %></center>
+ 									</div>
+ 									<div class="col-md-6 right shirt">
+ 										<h4>Back</h4>
+ 										<center><%= image_tag('AO_shirt_back.jpg', id: 'ShirtBack', class: 'img-responsive') %></center>
+ 									</div>
+ 								</div>
+ 								<div class="modal-footer">
+   								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+ 								</div>
+							</div>
+						</div>
+			</div>
+		</div>
+			<div class="mc-field-group input-group">
+    		<strong>Year  <span class="asterisk">*</span>
+				</strong>
+    		<ul><li><input type="radio" value="Freshmen" name="YEAR" id="mce-YEAR-0" checked="Freshmen"><label for="mce-YEAR-0">Freshmen</label></li>
+						<li><input type="radio" value="Sophomore" name="YEAR" id="mce-YEAR-1"><label for="mce-YEAR-1">Sophomore</label></li>
+						<li><input type="radio" value="Junior" name="YEAR" id="mce-YEAR-2"><label for="mce-YEAR-2">Junior</label></li>
+						<li><input type="radio" value="Senior" name="YEAR" id="mce-YEAR-3"><label for="mce-YEAR-3">Senior</label></li>
+						<li><input type="radio" value="Other" name="YEAR" id="mce-YEAR-4"><label for="mce-YEAR-4">Other</label></li>
+				</ul>
+			</div>
+			<div id="mce-responses" class="clear">
+				<div class="response" id="mce-error-response" style="display:none"></div>
+				<div class="response" id="mce-success-response" style="display:none"></div>
+				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="MAILCHIMP_API_AO_COMBINE_KEY" tabindex="-1" value=""></div>
+    		<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    		</div>
+	</form>
 </div>
-<%= form_for(:auxiliary, :html => {:class => "form-horizontal"}) do |f| %>
 
-  <div class="form-group">
-
-    <label class="col-sm-2 control-label">Full Name:</label>
-    <div class="col-sm-10">
-      <%= f.text_field :name, :required => true, :class => "form-control", :id => "name", :placeholder => "Full Name" %>
-    </div>
-
-  </div>
-
-  <div class="form-group">
-
-    <label class="col-sm-2 control-label">Email:</label>
-    <div class="col-sm-10">
-      <%= f.email_field :email, :required => true, :class => "form-control", :id => "email", :placeholder => "email@example.com" %>
-    </div>
-
-  </div>
-
-  <div class="form-group">
-
-    <label class="col-sm-2 control-label">Major:</label>
-    <div class="col-sm-10">
-      <%= f.text_field :major, :required => true, :class => "form-control", :id => "major", :placeholder => "Major" %>
-    </div>
-
-  </div>
-
-  <div class="form-group">
-
-    <label class="col-sm-2 control-dlabel">Expected Semester of Graduation:</label>
-    <div class="col-sm-10">
-      <%= f.text_field :expected_graduation, :required => true, :class => "form-control", :id => "email", :placeholder => "i.e. Winter 2015" %>
-    </div>
-
-  </div>
-
-
-  <div class="form-group">
-
-    <div class="col-sm-offset-2 col-sm-10">
-      <%= button_tag(type: 'submit', class: "btn btn-red btn-default") do %>
-      <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Submit!
-      <% end %>
-    </div>
-
-  </div>
-
-<% end %>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';
+	ftypes[2]='text';fnames[3]='SHIRTSIZE';ftypes[3]='radio';fnames[4]='YEAR';ftypes[4]='radio';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
