comment out Version Sponsorship

--- a/app/views/static_pages/sponsors.html.erb
+++ b/app/views/static_pages/sponsors.html.erb
@@ -1,7 +1,7 @@
 <div class="title">
 	<h1>Sponsors</h1>
 </div>
-<div id="smallSponsorRow" class="row sponsorsContent">
+<!-- <div id="smallSponsorRow" class="row sponsorsContent">
 	<div id="moreDetails" class="col-md-8">
 		<p><b><span class="small_title">Verizon's International Student Program</span></b><br />
 			iPhone 6S or 6S Plus available for pre-order now! Trade in your old smartphone for a new iPhone 6S or 6S Plus and get up to $400, when you trade in your old iPhone or Android, and another $100 when you switch to Verizon. Visit the Verizon store at 10250 Baltimore Ave, College Park, MD 20740 to learn more about this offer and <a href="http://vzw.com/internationalstudent">International Student Program</a>. No deposit. Simple signup. Just bring your international passport and student visa.<br /> <br />
@@ -11,10 +11,10 @@
 	<div id="verizon_logo" class="col-md-4">
 		<%= link_to image_tag('verizon_logos/verizon_logo_for_web.png', :class=>"img-responsive"), "http://www.verizon.com" %>
 	</div>
-</div>
+</div> -->
 <div id="smallSponsorRow" class="row sponsorsContent">
 	<div id="moreDetails" class="col-md-8">
-		<p><b><span class="small_title">We're also sponsored by: </span></b><br />
+		<p><b><span class="small_title">We're sponsored by: </span></b><br />
 			<p><a href='http://www.studypool.com'><span class="small_title">Studypool</span></a>, a leader in online homework help.</p><br />
 				Studypool is a marketplace for academic questions. That means students can post assignments they need help on, and qualified tutors will answer them. The tutors bid on answering your question and you choose the one you like. We have helped over 1.2 million students in the US alone.</p>
 	</div>
